# drangue

./: CONTRIBUTING.md  ECOSYSTEM.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  release.yml
drangue/: __init__.py  agent.py  budget.py  context.py  errors.py  evals.py  events.py  executor.py  guardrails.py  hardening.py  memory.py  models.py  orchestrator.py  registry.py  rollout.py  routing.py  structured.py  tool.py
drangue/engine/: __init__.py  eventsourced.py
drangue/observability/: __init__.py  console.py  otel.py
drangue/store/: __init__.py  memory.py  sqlite.py
drangue/testing/: __init__.py  conformance.py  fakes.py
examples/: cheap.py  weather.py
examples/refunds/: README.md  offline_demo.py  refund_agent.py  refund_tools.py
examples/refunds/fixtures/: orders.json
examples/sre/: README.md  offline_demo.py  sre_agent.py  sre_tools.py
examples/sre/fixtures/: deploys.jsonl
examples/sre/fixtures/runbooks/: orders-error-spike.md
extensions/: run_tests.py
extensions/drangue-mcp/: README.md  pyproject.toml
extensions/drangue-mcp/drangue_mcp/: __init__.py  toolset.py
extensions/drangue-mcp/tests/: test_mcp_pkg.py
extensions/drangue-memory/: README.md  pyproject.toml
extensions/drangue-memory/drangue_memory/: __init__.py  sqlite_memory.py
extensions/drangue-memory/tests/: test_memory_pkg.py
extensions/drangue-postgres/: README.md  pyproject.toml
extensions/drangue-postgres/drangue_postgres/: __init__.py  store.py
extensions/drangue-postgres/tests/: test_store_pkg.py
extensions/drangue-temporal/: README.md  pyproject.toml
extensions/drangue-temporal/drangue_temporal/: __init__.py  engine.py
extensions/drangue-temporal/tests/: test_temporal.py
tests/: test_agent.py  test_conformance.py  test_cost.py  test_distributed.py  test_durability.py  test_engine.py  test_evals.py  test_hardening.py  test_integration.py  test_lease.py  test_memory.py  test_multiturn.py  test_observability.py  test_openai_model.py  test_parallel_tools.py  test_rollout.py  test_run_config.py  test_security.py  test_streaming.py  test_structured.py  test_tool_schemas.py
