[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drangue"
version = "0.0.1"
description = "A tiny, obvious agent runtime for Python. No graphs, no chains, no ceremony."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "drangue contributors" }]
keywords = ["agent", "llm", "ai", "tools", "claude", "anthropic"]
dependencies = ["anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/om-er/drangue"

[tool.hatch.build.targets.wheel]
packages = ["drangue"]
