[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drangue"
version = "0.0.1"
description = "A tiny, obvious agent runtime for Python. No graphs, no chains, no ceremony."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "drangue contributors" }]
keywords = ["agent", "llm", "ai", "tools", "claude", "anthropic", "openai"]
# The core has zero dependencies. Install the adapter you want:
#   pip install "drangue[openai]"     covers OpenAI, DeepSeek, Groq, Ollama, ...
#   pip install "drangue[anthropic]"  covers Claude
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
dev = ["pytest>=7", "anthropic>=0.40", "openai>=1.0"]

[project.urls]
Homepage = "https://github.com/om-er/drangue"

[tool.hatch.build.targets.wheel]
packages = ["drangue"]
