[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drangue-mcp"
version = "0.0.1"
description = "MCP tools for drangue: expose any Model Context Protocol server's tools as drangue tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["drangue>=0.1,<0.3", "mcp>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["drangue_mcp"]
