[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drangue-memory"
version = "0.0.1"
description = "Long-term memory for drangue (the Memory seam): SQLite + embedding backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["drangue>=0.2,<0.3"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["drangue_memory"]
