[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drangue-postgres"
version = "0.0.1"
description = "Durable Postgres event store for drangue (the Store seam)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["drangue>=0.2,<0.3", "psycopg[binary]>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["drangue_postgres"]
