[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drangue-temporal"
version = "0.0.1"
description = "Run drangue agents on Temporal: durable supervision of the engine (the Engine seam)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["drangue>=0.0.1", "temporalio>=1.5"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["drangue_temporal"]
